# tiger

./: CMakeLists.txt  main.cpp
depth_map_processor/: CMakeLists.txt
image_pair_open_object/: CMakeLists.txt  image_pair_open_widget.cpp  image_pair_open_widget.hpp
image_pair_open_object/image_open_widget/: CMakeLists.txt  image_open_widget.cpp
image_pair_open_object/image_open_widget/image_open_object/: CMakeLists.txt  image_open_object.cpp  image_open_object.hpp
image_viewer/: CMakeLists.txt  image_viewer.cpp  image_viewer.hpp
image_viewer/output_scene/: CMakeLists.txt  output_scene.cpp  output_scene.hpp
image_viewer/output_view/: CMakeLists.txt  output_view.cpp  output_view.hpp
mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
mainwindow/depth_map_processor/: CMakeLists.txt  depth_map_processor.cpp  depth_map_processor.hpp
mainwindow/depth_map_widget/: CMakeLists.txt  depth_map_widget.cpp  depth_map_widget.hpp
mainwindow/depth_map_widget/depth_map_processor/: CMakeLists.txt  depth_map_processor.cpp  depth_map_processor.hpp
mainwindow/image_pair_open_widget/: CMakeLists.txt  image_pair_open_widget.cpp  image_pair_open_widget.hpp
mainwindow/image_pair_open_widget/image_open_widget/: CMakeLists.txt  image_open_widget.cpp  image_open_widget.hpp
mainwindow/image_parameters_widget/: CMakeLists.txt  image_parameters_widget.cpp  image_parameters_widget.hpp
mainwindow/image_viewer/: CMakeLists.txt  image_viewer.cpp  image_viewer.hpp
mainwindow/image_viewer/output_scene/: CMakeLists.txt  output_scene.cpp  output_scene.hpp
(+6 files in other folders)
