cmake_minimum_required(VERSION 3.20)
project(tiger LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 COMPONENTS Widgets REQUIRED)
find_package(OpenCV REQUIRED)
add_subdirectory(mainwindow)
set(TIGER_SOURCES ${TIGER_SOURCES} main.cpp)
add_executable(tiger-app ${TIGER_SOURCES})
target_link_libraries(tiger-app PRIVATE Qt6::Widgets ${OpenCV_LIBS})
